--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/dom-crawler": "~2.8|~3.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "~4.0",
         "symfony/phpunit-bridge": "~2.8|~3.0",
         "symfony/process": "~2.8|~3.0",
         "symfony/css-selector": "~2.8|~3.0"
